# artemis

./: .#railway.json  .gitignore  README.md  TODO.md  cli_chat.py  pyproject.toml  railway.json  run.py  test_chat.py  view_logs.py
analysis/: debug_response.py  test_agent.py  test_calculator.py
artemis/: config.py  logging_config.py
artemis/api/: auth.py  main.py  models.py
artemis/api/routes/: chat.py
artemis/chatbot/: agent.py  chatbot.py  prompt.py  tools.py
artemis/tools/: .#personal.py  architecture.py  calculator.py  personal.py  research_deepdive.py  resume_info.py
resources/: architecture-diagram.md  resume_parsed.json
resources/professional/: projects.md
resources/research/: chante-point-detection-summary.md  droplet-solitons-summary.md  metrics-for-graph-comparison-summary.md  performance-of-test-supermartingale-summary.md
