[tool.poetry]
name = "artemis"
version = "0.1.0"
description = "Personal AI chatbot powered by Claude"
authors = ["Peter Wills <peter.e.wills@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
langchain = "^0.3.13"
langchain-anthropic = "^0.3.4"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.0"
sse-starlette = "^2.1.0"
aiohttp = "^3.12.14"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"